2006-11-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-main.c:
	Don't crash when saving session (bug #364790)
	
	* src/yelp-search-pager.c: 
	Replace ':' chars in search strings with ' '
	Stops from crashing (bug #364768)
	Don't chew memory when search string contains
	2 consecutive spaces
	

2006-10-25  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c:
	Fix double free in stupid link types only used by gdb
	info page (apparently).  Bug #364850
	
	* src/yelp-search-pager.c: 
	Don't crash when searching for empty term.  Bug #363949
	
2006-10-07  Elijah Newren  <newren gmail com>

	* src/yelp-print.c (yelp_print_present_status_dialog): Remove
	markup from translatable messages.  #360450

2006-10-05  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-utils.c: 
	Don't crash when manpath (prog) || MANPATH (env.)
	is available
	
==================== 2.16.1 ====================
2006-10-02  Don Scorgie  <dscorgie@cvs.gnome.org>

	* NEWS:
	* configure.in:
	- Version 2.16.1
	
2006-09-29  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-settings.c: 
	* src/yelp-settings.h:
	* src/yelp-window.c:
	Make F7 toggle caret properly
	Set initial state of caret in prefs window

2006-09-17  Christian Persch  <chpe@cvs.gnome.org>

	* src/Yelper.cpp:
	* src/Yelper.h:

	Fix the build with gecko trunk.

2006-09-12  Christian Persch  <chpe@cvs.gnome.org>

	* m4/gecko.m4:

	Prefer xulrunner over mozilla.

==================== 2.16.0 ====================
2006-09-04  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.16.0

2006-09-03  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (toc_add_doc_info): check if the document
	category exists, and return if it does not should fix 353554

2006-08-30  Don Scorgie  <don@Madaline>

	* src/yelp-io-channel.c: 
	Don't double free bzip streams
	
2006-08-30  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-search-pager.c: 
	Move online url to perminant address at gnome.org
