@@ -1,3 +1,10 @@
+2006-11-20  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-info-parser.c: 
+	When whitespace on new line of a note is < 2,
+	don't crash (bug #376861)
+	Fix crash on libc info page (bug #367410, Matthias Clasen)
+	
 2006-11-05  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-main.c:
@@ -8,7 +15,6 @@
 	Stops from crashing (bug #364768)
 	Don't chew memory when search string contains
 	2 consecutive spaces
-	
 
 2006-10-25  Don Scorgie  <dscorgie@cvs.gnome.org>
 
